--- a/templates/movies/base_layout.html
+++ b/templates/movies/base_layout.html
@@ -14,21 +14,14 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
 </head>
-<body>
-{% include 'main/header.html' %}
+    <body>
+        {% include 'movies/header.html' %}<br>
+         {% block mainblock %}
 
-<a href="{% url 'todo:index' %}">TODO INDEX</a>
-<br/>
-<a href="{% url 'todo:todo-list' %}">TODO LIST</a>
-<br/>
-<br/>
+            <li> You need to override block main-content</li>
 
-{% block main-content %}
-<li> You need to override block main-content </li>
-{% endblock %}
-
-<br/>
-
-{% include 'main/footer.html' %}
-</body>
+        {% endblock %}
+        <br>
+        {% include 'movies/footer.html' %}
+    </body>
 </html>
