--- a/movies/templates/movies/moviedetails.html
+++ b/movies/templates/movies/moviedetails.html
@@ -10,36 +10,18 @@
          <p> Movie rate: {{Movie.rate}} </p>
          <p> Movie creation date: {{Movie.creationDate}} </p>
          <p> Movie production date: {{Movie.productionDate}} </p>
+         <p> Movie Actors:  </p>
+        {% for actor in Movie.actors.all %}
+         <li> {{actor.firstname}} {{actor.lastname}}   </li>
+        {% endfor %}
+        <br>
+        <p> Movie Reviews:  </p>
+        {% for review in Movie.review_set.all %}
+         <li> {{review.comment}} {{review.creationDate}}   </li>
+        {% endfor %}
 
 
 {% endblock %}
 
 
 
-
-
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Description</th>
-              <th scope="col">View</th>
-              <th scope="col">Update</th>
-              <th scope="col">delete</th>
-            </tr>
-          </thead>
-          <tbody>
-          {% for movie in tasklist %}
-            <tr>
-              <th scope="row">{{ movie.name }}</th>
-              <td>{{ movie.description  | truncatewords:6 }}</td>
-              <td><a href="{% url 'taskdetails' movie.id %}" class="btn btn-primary"> view</a></td>
-              <td><a href="{% url 'taskupdate' movie.id %}" class="btn btn-primary" > update</a></td>
-              <td><a href="{% url 'taskdelete' movie.id %}" class="btn btn-primary"> delete</a></td>
-            </tr>
-
-            {% empty %}
-                 <tr>Sorry, no movies in this list.</tr>
-            {% endfor %}
-          </tbody>
-        </table>
