--- a/movies/templates/movies/moviecreate.html
+++ b/movies/templates/movies/moviecreate.html
@@ -1,28 +1,34 @@
 {% extends 'movies/base_layout.html' %}
+{% load widget_tweaks %}
 
 <!--{% block title %} task details {% endblock %}-->
 {% block mainblock %}
 
+<div class="container">
+      <form method="post" action="{% url 'createmovie' %}">
+        {% csrf_token %}
+        {% for field in form %}
+        {{ field.label_tag }}
+        {% render_field field class='form-control' %}
+        {% endfor%}
 
-<form method="post" action="{% url 'createmovie' %}">
-  {% csrf_token %}
-  {{ form.as_p}}
 
-  {% comment %}
-<!--  <div class="form-group">-->
-<!--    <label for="exampleInputEmail1">Movie name</label>-->
-<!--    <input type="text" name='name' class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">-->
-<!--    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
-<!--  </div>-->
-<!--  <div class="form-group">-->
-<!--    <label for="exampleInputPassword1">description</label>-->
-<!--    <input type="text" name="decription" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
+        {% comment %}
+            <!--  <div class="form-group">-->
+            <!--    <label for="exampleInputEmail1">Movie name</label>-->
+            <!--    <input type="text" name='name' class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">-->
+            <!--    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+            <!--  </div>-->
+            <!--  <div class="form-group">-->
+            <!--    <label for="exampleInputPassword1">description</label>-->
+            <!--    <input type="text" name="decription" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
 
-<!--  </div>-->
-    {% endcomment %}
+            <!--  </div>-->
+          {% endcomment %}
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+  </div>
 
 {% endblock %}
 
