--- a/templates/movies/header.html
+++ b/templates/movies/header.html
@@ -10,6 +10,9 @@
             <a class="nav-link" href="/tasklist">Home</a>
             <a class="nav-link" href="/tasklist">Task list</a>
             <a class="nav-link" href="/task/1">task details</a>
+            <a class="nav-link" href="moviesview">movies</a>
+            <a class="nav-link" href="/register">register</a>
+           <a class="nav-link" href="/login">login</a>
           </div>
         </div>
       </div>
