--- a/templates/movies/base_layout.html
+++ b/templates/movies/base_layout.html
@@ -16,6 +16,12 @@
 </head>
     <body>
         {% include 'movies/header.html' %}<br>
+        {% if user.is_authenticated %}
+                <p> Welcome '{{ user.username }}'
+        <form method="post" action="{% url 'logout' %}">{% csrf_token%} <button class="btn" type="submit" > logout </button></form> </p>
+            {% else %}
+                <a  href="/login" >Login</a>
+            {% endif %}
          {% block mainblock %}
 
             <li> You need to override block main-content</li>
