--- a/movies/templates/movies/loginform.html
+++ b/movies/templates/movies/loginform.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label >username</label>
+              <label >username</label>1
               <input type="text" class="form-control" name="username" placeholder="username">
             </div>
 
